# redis-kafka

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  main.py
app/api/: dependencies.py
app/api/v1/: addresses.py  auth.py  cart.py  categories.py  orders.py  products.py  router.py  users.py
app/core/: exceptions.py  kafka.py  redis.py  security.py
app/middleware/: __init__.py  rate_limiter.py
app/models/: __init__.py  cart.py  order.py  product.py  user.py
app/schemas/: __init__.py  address.py  auth.py  cart.py  category.py  order.py  product.py  user.py
app/services/: __init__.py  address_service.py  analytics_service.py  cache_service.py  cart_service.py  category_service.py  notification_service.py  order_service.py  product_service.py  user_service.py
docker/: Dockerfile
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_cart.py  test_categories.py  test_orders.py  test_products.py
tests/services/: test_cache_service.py  test_cart_service.py  test_order_service.py  test_product_service.py  test_user_service.py
workers/: __init__.py  kafka_consumer.py  run_consumer.py
